--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "array-move": "^4.0.0",
-    "react-sortable-hoc": "^2.0.0"
+    "array-move": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
